[gd_scene load_steps=8 format=3 uid="uid://dar8l1i5oaags"]

[ext_resource type="Theme" uid="uid://b7ridqq1ro7a8" path="res://metal_theme.tres" id="1_c0veg"]
[ext_resource type="Script" path="res://hud/bottom_ui.gd" id="2_oorqo"]
[ext_resource type="Texture2D" uid="uid://e3lmqbfejvqp" path="res://icon.svg" id="3_ac250"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73vt4"]
bg_color = Color(0.111197, 0.111197, 0.111197, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcgd8"]
bg_color = Color(0.47451, 0.556863, 0.262745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fae5n"]
bg_color = Color(0.111197, 0.111197, 0.111197, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r33gw"]
bg_color = Color(0.67451, 0.137255, 0.184314, 1)

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_c0veg")
script = ExtResource("2_oorqo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_c0veg")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer/HBoxContainer"]
layout_mode = 2
text = "Weapon hotbar goes here"

[node name="AmmoContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/StatsContainer/AmmoContainer"]
layout_mode = 2
texture = ExtResource("3_ac250")
expand_mode = 3

[node name="AmmoBarLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer/AmmoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_c0veg")
theme_override_colors/font_color = Color(0.47451, 0.556863, 0.262745, 1)
text = "60"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AmmoBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/StatsContainer/AmmoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_73vt4")
theme_override_styles/fill = SubResource("StyleBoxFlat_dcgd8")
value = 50.0
show_percentage = false

[node name="HealthBarContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/StatsContainer/HealthBarContainer"]
layout_mode = 2
texture = ExtResource("3_ac250")
expand_mode = 3
stretch_mode = 4

[node name="HealthBarLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer/HealthBarContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.137255, 0.184314, 1)
text = "60"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/StatsContainer/HealthBarContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_fae5n")
theme_override_styles/fill = SubResource("StyleBoxFlat_r33gw")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="UpgradeRelatedContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/UpgradeRelatedContainer"]
layout_mode = 2
text = "{gunman placeholder}"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/UpgradeRelatedContainer"]
layout_mode = 2
text = "{gunman placeholder}"

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/UpgradeRelatedContainer"]
layout_mode = 2
text = "{gunman placeholder}"

[node name="ShopContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ShopContainer"]
layout_mode = 2

[node name="Wave Container" type="PanelContainer" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer/Wave Container"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer/Wave Container/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="WaveCounterLabel" type="Label" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer/Wave Container/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "{waves}"

[node name="Break Container" type="PanelContainer" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer/Break Container"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer/Break Container/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="BreakLabel" type="Label" parent="MarginContainer/HBoxContainer/ShopContainer/HBoxContainer/Break Container/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "{break}"

[node name="CoinPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/ShopContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ShopContainer/CoinPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ShopContainer/CoinPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CoinLabel" type="Label" parent="MarginContainer/HBoxContainer/ShopContainer/CoinPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="ShopButton" type="Button" parent="MarginContainer/HBoxContainer/ShopContainer/CoinPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BUY"
